--- a/Source/PhantomJs.NetCore/PhantomJs.NetCore.csproj
+++ b/Source/PhantomJs.NetCore/PhantomJs.NetCore.csproj
@@ -11,7 +11,7 @@
     <PackageTags>c# netcore pdf html</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageVersion>1.0.1</PackageVersion>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
+    <AssemblyVersion>1.0.5</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -31,6 +31,14 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
